Refactoring, improved model selection.

--- a/notebooks/showcase.ipynb
+++ b/notebooks/showcase.ipynb
@@ -12,9 +12,7 @@
    "cell_type": "markdown",
    "id": "c1856204",
    "metadata": {},
-   "source": [
-    "DISCLAIMER: all required algorithms have been implemented from scratch in this project, except from PyTorch's `torch.nn` and `torch.optim` libraries, as well as loss functions."
-   ]
+   "source": "DISCLAIMER: all required algorithms have been implemented from scratch in this project, except from backbone models using PyTorch's `torch.nn` and `torch.optim` libraries, as well as loss functions."
   },
   {
    "cell_type": "code",
@@ -46,29 +44,29 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In this notebook we are going to show some running examples of the `Dark Experience Replay` method ([original paper](https://arxiv.org/pdf/2004.07211)). The documentation of all the implemented methods can be found underneath their respective filesm functions and methods.\n",
+    "In this notebook we are going to show some running examples of the `Dark Experience Replay` method ([original paper](https://arxiv.org/pdf/2004.07211)). The documentation of all the implemented methods can be found underneath their respective files, functions and methods.\n",
     "\n",
     "## Implementation Choices\n",
-    "- Every dataset has an associated model, together with its hyperparameters. For example, `SequentialMNIST` has a `SingleHeadMLP` model attached to it, with a predefined number of neurons per layer. It also has a fixed number of epochs (just one for the dataset simplicity) and a fxed batch size.\n",
+    "- Every dataset has an associated model, together with its hyperparameters. For example, `SequentialMNIST` has a `SingleHeadMLP` model attached to it, with a predefined number of neurons per layer. It also has a fixed number of epochs (just one for the dataset simplicity) and a fixed batch size.\n",
     "- DER has a fixed replay batch size, fixed SGD optimizer with changeable learning rate. The replay buffer is implemented with reservoir and simply stores all the needed variables to perform the forward pass, the loss calculation and the optimization step.\n",
-    "- In CIL we store in the replay all neurons, which are going to be masked according to the task id in the metrics calculation.\n",
-    "- In TIL we could adopt a multi-head architecture (implemented in models.py) but we decided to stick with the single head architecture + masking of all not required neurons.\n",
-    "- In DIL we use all neurons.\n",
+    "- In CIL, we store all output neurons in the replay buffer, which are going to be masked according to the task id in the metrics calculation.\n",
+    "- In TIL, we store all output neurons in the replay buffer as in CIL. We could have adopted a multi-head architecture (implemented in `src/models.py`) but we decided to stick with the single head architecture + masking of all not required output neurons (based on the input task id).\n",
+    "- In DIL, we use all neurons.\n",
     "\n",
     "## Metrics\n",
     "In all scenarios we compute the following metrics a matrix $R \\in [0,1]^{T \\times T}$, where $R_{ij} \\in [0,1]$ is the accuracy of the model at time $i$ on task $j$, and then we compute all the relevant metrics:\n",
-    "- Average accuracy over all tasks: mean of lower triangolar matrix\n",
+    "- Average accuracy over all tasks: mean of its lower triangular matrix\n",
     "- Last model accuracy: bottom right element of the matrix\n",
     "- Full stream accuracy: mean of the last row of the matrix\n",
     "- Forgetting\n",
     "- Backward Transfer\n",
     "- Forward Transfer\n",
     "\n",
-    "In DIL we are more interested in forward and backward transfer with respect to the other since we always have all neurons available and the data is undergone a task dependent change of distribution (as in `PermutedMNIST` and `RotatedMNIST`), while in CIL and TIL it is not a good metric and we rather focus on accuracies and forgetting.\n",
+    "In DIL, we are more interested in forward and backward transfer with respect to the other since we always have all neurons available and the data is undergone a change of distribution (as in `PermutedMNIST` and `RotatedMNIST`). Instead, in CIL and TIL it is not a good metric, and we rather focus on accuracies and forgetting.\n",
     "\n",
     "## Hyperparameters\n",
     "\n",
-    "In this notebook all hyperparameters such as learning rate, batch size, number of neurons per layer, etc. are fixed, sticking with the suggestions of the original paper. They are being validated in the `validation` notebook (in the same folder). The buffer size for ALL methods is set as default to 500, but it tuned in the validation notebook.\n",
+    "In this notebook all hyperparameters such as learning rate, batch size, number of neurons per layer, etc. are fixed, sticking with the suggestions of the original paper. They are being validated in the `notebooks/validation.iypnb` notebook (in the same folder). The buffer size for ALL methods is set as default to 500, but it is then tuned in the other notebook.\n",
     "\n",
     "## Outline\n",
     "\n",
@@ -77,7 +75,7 @@
     "2. DER and DER++ on `PermutedMNIST` (DIL)\n",
     "3. DER and DER++ on `RotatedMNIST` (DIL)\n",
     "\n",
-    "We also have provided examples on `CIFAR10`, which is in the notebook `showcase_cifar10.ipynb` (in the same folder)."
+    "We also have provided examples on `CIFAR10`, which is in the notebook `notebooks/showcase_cifar10.ipynb`."
    ]
   },
   {
@@ -87,8 +85,8 @@
    "source": [
     "# Sequential MNIST - Task and Class Incremental Learning\n",
     "\n",
-    "Sequential mnist consists of 5 tasks with respctively the classes 0-1, 2-3, 4-5, 6-7, 8-9. \n",
-    "Here we train a MLP having one hidden layer with DER and we show metrics for both the TIL and CIL scenarios.\n"
+    "Sequential MNIST consists of 5 tasks with respectively the classes 0-1, 2-3, 4-5, 6-7, 8-9. \n",
+    "Here we train a MLP having one hidden layer with DER, and we show metrics for both the TIL and CIL scenarios.\n"
    ]
   },
   {
@@ -98,11 +96,11 @@
    "source": [
     "## DER\n",
     "\n",
-    "In the output we can see the results of the metrics for both TIL and CIL scenarios:\n",
+    "In the cell output we can see the results of the metrics for both TIL and CIL scenarios:\n",
     "- CIL: we have the upper part of the accuracy matrix filled with zeros, which is reasonable since the model is not activating neurons of unseen classes, whilst it remembers the old tasks (lower part);\n",
     "- TIL: The upper part of the matrix is suggesting that we are randomly predicting one class over the two possible classes, which is expected since we haven't seen the data yet (remember this doesn't use as backbone a multi-head architecture).\n",
     "\n",
-    "In both cases we have a good BWT and forgetting which is expected from setting $\\alpha=0$."
+    "Forgetting and BWT are better in the TIL scenario, which is expected due to the simplicity of this task with respect to CIL."
    ]
   },
   {
@@ -261,6 +259,7 @@
    "source": [
     "main.run_experiment(\n",
     "    DATASET='SequentialMNIST',\n",
+    "    lr=0.03,\n",
     "    alpha=1.0,\n",
     "    beta=0.5\n",
     ")"
@@ -283,7 +282,7 @@
    "source": [
     "## DER\n",
     "\n",
-    "In this case the forward transfer is close to zero as expected since the permutations are not task dependent, but totally random. This means that the model is not capable of reusing its gained knowledge from the previous tasks to reconstruct something that cannot be resembled with the task id. The backward transfer is better than the one in the paper, but for a better comparison we would have to run the same experiments multiple times."
+    "In this case the forward transfer is close to zero as expected since the permutations are not task dependent, but totally random. This means that the model is not capable of reusing its gained knowledge from the previous tasks to infer something never seen."
    ]
   },
   {
@@ -741,6 +740,15 @@
     "    beta=0.5\n",
     ")"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Conclusion\n",
+    "\n"
+   ],
+   "id": "d1e1580face7731c"
   }
  ],
  "metadata": {
