--- a/notebooks/showcase_cifar10.ipynb
+++ b/notebooks/showcase_cifar10.ipynb
@@ -5,7 +5,7 @@
    "id": "fdcadf7f",
    "metadata": {},
    "source": [
-    "# CIFAR10 Experiments\n",
+    "# CIFAR10 DER - Showcase\n",
     "\n",
     "CIFAR10 is a dataset of 60,000 32x32 color images in 10 classes, with 6,000 images per class. There are 50,000 training images and 10,000 test images. In this benchmark we will use CIFAR10 in the CIL and TIL settings."
    ]
@@ -34,15 +34,25 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Overview\n",
+    "\n",
+    "In the original paper, the authors test the implementation of the proposed algorithms by training a ResNet-18 on CIFAR10 in the CIL and TIL settings, with 5 epochs. However, for computational time we only show the result for one epoch (which takes about 3 minutes on a chip M2 Pro with 9000 images). The results are on the same line as the ones reported in the paper, with a little decrease (due to the lower number of epochs).\n",
+    "\n",
+    "Even here, the hyperparameters are fixed to those suggested by the original paper (from their validation)."
+   ],
+   "id": "8060e6c0dbed5104"
+  },
+  {
    "cell_type": "markdown",
    "id": "669b9a72",
    "metadata": {},
    "source": [
     "# DER\n",
     "\n",
-    "Here we evaluate the metrics when using DER. We set the number of epochs to 1 for running the experiments faster. \n",
-    "\n",
-    "We achieve a comparable performance with the results reported in the paper, with 4 epochs less."
+    "This benchmark is harder than MNIST, so we expect slightly lower performances. "
    ]
   },
   {
@@ -130,8 +140,6 @@
    "source": [
     "# DER++\n",
     "\n",
-    "Here we evaluate the metrics when using DER++, always with 1 epoch instead of 5.\n",
-    "\n",
     "Even here, we achieve a comparable performance with the results reported in the paper."
    ]
   },
@@ -208,6 +216,14 @@
     "    beta=0.5,\n",
     ")"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "e787ef38d910b404"
   }
  ],
  "metadata": {
