--- a/notebooks/showcase.ipynb
+++ b/notebooks/showcase.ipynb
@@ -745,10 +745,21 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Conclusion\n",
-    "\n"
+    "## Conclusions\n",
+    "\n",
+    "In this notebook we have shown the results of the `Dark Experience Replay` method on three different benchmarks. We have seen that the method is able to mitigate catastrophic forgetting and to improve the forward transfer in the case of Rotated MNIST. The DER++ variant is able to improve the results by taking into account the past tasks. The results are consistent with the original paper and the method is able to achieve state-of-the-art results on the benchmarks used in this project. \n",
+    "\n",
+    "Future works could explore the possibility of including more complex tasks and datasets, as well as different architectures.\n"
    ],
    "id": "d1e1580face7731c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "56156f74a70dc377"
   }
  ],
  "metadata": {
