--- a/notebooks/validation.ipynb
+++ b/notebooks/validation.ipynb
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion\n",
+    "# Conclusions\n",
     "\n",
     "We can see how continual hyperparameter selection is influenced by the choice of the accuracy drop margin:\n",
     "- A higher allowed drop in accuracy preserves the stability of the model, meaning that we should get more backward transfer and less catastrophic forgetting.\n",
